[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "merkle_tree"
path = "src/merkle_tree.rs"

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
starknet-crypto = "0.4.2"
actix-web = "4"
lazy_static = "1.4"
regex = "1.10.3"
zip = "0.6.6"
utoipa = { version = "4.2.0", features = ["chrono", "actix_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["actix-web"] }
hex = "0.4"
mongodb = { version = "2.0.0", default-features = false, features = ["sync"] }
dotenv = "0.15"
csv = "1.1.6"
